--- a/style.css
+++ b/style.css
@@ -1,23 +1,24 @@
 @import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,500;9..144,600;9..144,700;9..144,800;9..144,900&family=Poppins:wght@300;400;500;600;700&display=swap");
 
-:root{
-    
-    --color-white: hsl(252, 30%, 100%);
-    --color-light: hsl(252, 30%, 95%);
-    --color-gray: hsl(252, 15%, 65%);
-    --color-primary: hsl(252, 75%, 60%);
-    --color-secondary: hsl(252, 100%, 90%);
-    --color-success: hsl(120, 95%, 65%);
-    --color-danger: hsl(0, 95%, 65%);
-    --color-dark: hsl(252, 30%, 17%);
-    --color-black: hsl(252, 30%, 10%);
+:root {
+  --color-white: hsl(252, 30%, 100%);
+  --color-light: hsl(252, 30%, 95%);
+  --color-gray: hsl(252, 15%, 65%);
+  --color-primary: hsl(252, 75%, 60%);
+  --color-secondary: hsl(252, 100%, 90%);
+  --color-success: hsl(120, 95%, 65%);
+  --color-danger: hsl(0, 95%, 65%);
+  --color-dark: hsl(252, 30%, 17%);
+  --color-black: hsl(252, 30%, 10%);
 
-    --border-radius: 2rem;
-    --card-border-radius: 1rem;
-    --btn-padding: 0.6rem 2rem;
-    --search-padding: 0.6rem 1rem;
-    --card-padding: 1rem;
+  --border-radius: 2rem;
+  --card-border-radius: 1rem;
+  --btn-padding: 0.6rem 2rem;
+  --search-padding: 0.6rem 1rem;
+  --card-padding: 1rem;
 
+  --sticky-top-left: 5.4rem;
+  --sticky-top-right: -18rem;
 }
 
 *,
@@ -33,96 +34,235 @@
 }
 
 body {
-    font-family: 'Fraunces', serif;
-    font-family: 'Poppins', sans-serif;
-    color: var(--color-dark);
-    background: var(--color-light);
-    overflow-x: hidden;
+  font-family: "Fraunces", serif;
+  font-family: "Poppins", sans-serif;
+  color: var(--color-dark);
+  background: var(--color-light);
+  overflow-x: hidden;
 }
 
 /* GENERAL STYLES */
-.container{
-    width: 80%;
-    margin: 0 auto;
+.container {
+  width: 80%;
+  margin: 0 auto;
 }
 
-.profile-photo{
-    width: 2.7rem;
-    /* the aspect-ration makes the height(2.7rem) and width(2.7rem) the same */
-    aspect-ratio: 1/1;
-    border-radius: 50%;
-    overflow: hidden; 
+.profile-photo {
+  width: 2.7rem;
+  /* the aspect-ration makes the height(2.7rem) and width(2.7rem) the same */
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  overflow: hidden;
 }
 
-img{
-    display: block;
-    width: 100%;
+img {
+  display: block;
+  width: 100%;
 }
 
-.btn{
-    display: inline-block;
-    padding: var(--btn-padding);
-    font-weight: 500;
-    border-radius: var(--border-radius);
-    cursor: pointer;
-    transition: all 300ms ease;
-    font-size: 0.9rem;
+.btn {
+  display: inline-block;
+  padding: var(--btn-padding);
+  font-weight: 500;
+  border-radius: var(--border-radius);
+  cursor: pointer;
+  transition: all 300ms ease;
+  font-size: 0.9rem;
 }
 
-.btn:hover{
-    opacity: 0.8;
+.btn:hover {
+  opacity: 0.8;
 }
 
-.btn-primary{
-    background: var(--color-primary);
-    color: white ;
+.btn-primary {
+  background: var(--color-primary);
+  color: white;
 }
 
-.text-bold{
-    font-weight: 500;
+.text-bold {
+  font-weight: 500;
 }
 
-.text-muted{
-    color: var(--color-gray);
+.text-muted {
+  color: var(--color-gray);
 }
 
 /* ========================NAVBAR============================= */
-nav{
+nav {
+  width: 100%;
+  background: var(--color-white);
+  padding: 0.7rem 0;
+  position: fixed;
+  top: 0;
+  z-index: 10;
+}
+
+nav .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+nav .search-bar {
+  background: var(--color-light);
+  border-radius: var(--border-radius);
+  padding: var(--search-padding);
+}
+
+nav .search-bar input[type="search-bar"] {
+  background: transparent;
+  width: 30vw;
+  margin-left: 1rem;
+  font-size: 0.9rem;
+  color: var(--color-dark);
+}
+
+nav .search-bar input[type="search-bar"]::placeholder {
+  color: var(--color-gray);
+}
+
+nav .create {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+/* ===========================MAIN SECTION================================= */
+main {
+  position: relative;
+  top: 5.4rem;
+}
+
+main .container {
+  display: grid;
+  /* grid-template-colums: left: 18vw, middle: auto, right: 20vw */
+  grid-template-columns: 18vw auto 20vw;
+  column-gap: 2rem;
+  position: relative;
+}
+
+/* =========================== lEFT ================================= */
+main .container .left {
+  height: max-content;
+  position: sticky;
+  top: var(--sticky-top-left);
+}
+
+main .container .left .profile {
+  padding: var(--card-padding);
+  background: var(--color-white);
+  border-radius: var(--card-border-radius);
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+  width: 100%;
+}
+
+/* =========================== SIDEBAR ================================= */
+.left .sidebar {
+  margin-top: 1rem;
+  background: var(--color-white);
+  border-radius: var(--card-border-radius);
+}
+
+.left .sidebar .menu-item {
+  display: flex;
+  align-items: center;
+  height: 4rem;
+  cursor: pointer;
+  transition: all 300ms ease;
+  position: relative;
+}
+
+.left .sidebar .menu-item:hover {
+  background: var(--color-light);
+}
+
+.left .sidebar i {
+  font-size: 1.4rem;
+  color: var(--color-gray);
+  margin-left: 2rem;
+  position: relative;
+}
+
+.left .sidebar i .notification-count {
+  background: var(--color-danger);
+  color: white;
+  font-size: 0.7rem;
+  width: fit-content;
+  border-radius: 0.8rem;
+  padding: 0.1rem 0.4rem;
+  position: absolute;
+  top: -0.2rem;
+  right: -0.3rem;
+}
+
+.left .sidebar h3 {
+  margin-left: 1.5rem;
+  font-size: 1rem;
+}
+/* this is the active class that will be used in Javascript */
+.left .sidebar .active {
+  background: var(--color-light);
+}
+
+.left .sidebar .active i,
+.left .sidebar .active h3 {
+  color: var(--color-primary);
+}
+
+/* We gave position absolute because the menu-item is relative */
+/* This is the violet triangle at the left of the home-active */
+.left .sidebar .active::before {
+  content: "";
+  display: block;
+  width: 0.5rem;
+  height: 100%;
+  position: absolute;
+  background: var(--color-primary);
+}
+
+.left .sidebar .menu-item:first-child.active {
+  border-top-left-radius: var(--card-border-radius);
+  overflow: hidden;
+}
+
+.left .sidebar .menu-item:last-child.active {
+  border-top-left-radius: var(--card-border-radius);
+  overflow: hidden;
+}
+
+.left .btn{
+    margin-top: 1rem;
     width: 100%;
-    background: var(--color-white);
-    padding: 0.7rem 0;
-    position: fixed;
+    text-align: center;
+    padding: 1rem 0;
+}
+
+/* -------------------------------NOTIFICATION POPUP------------------------------ */
+/* We have all the menu-item to be relative so the notification popup must have position */
+.left .notification-popup{
+    position: absolute;
     top: 0;
-    z-index: 10;
+    left: 110%;
+    width: 30rem;
+    background: var(--color-white);
+    border-radius: var(--card-border-radius);
+    padding: var(--card-padding);
+    box-shadow: 0 0 2rem hsl(var(--color-primary), 75%, 60%, 25%)
 }
 
-nav .container{
+.left .notification-popup::before{
+    content: '';
+    width: 1.2rem;
+    height: 1.2rem;
+    display: block;
+    background: red;
+}
+/* styling the direct div. Individual styling */
+.left .notification-popup > div{
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    align-items: start;
+    gap: 1rem;
+    margin-bottom: 1rem;
 }
-
-nav .search-bar{
-    background: var(--color-light);
-    border-radius: var(--border-radius);
-    padding: var(--search-padding);
-}
-
-nav .search-bar input[type="search-bar"]{
-    background: transparent;
-    width: 30vw ;
-    margin-left: 1rem;
-    font-size: 0.9rem;
-    color: var(--color-dark);
-}
-
-nav .search-bar input[type="search-bar"]::placeholder{
-    color: var(--color-gray);
-}
-
-nav .create{
-    display: flex;
-    align-items: center;
-    gap: 2rem;
-}
-    
