--- a/style.css
+++ b/style.css
@@ -232,37 +232,134 @@ main .container .left .profile {
   overflow: hidden;
 }
 
-.left .btn{
-    margin-top: 1rem;
-    width: 100%;
-    text-align: center;
-    padding: 1rem 0;
+.left .btn {
+  margin-top: 1rem;
+  width: 100%;
+  text-align: center;
+  padding: 1rem 0;
 }
 
 /* -------------------------------NOTIFICATION POPUP------------------------------ */
 /* We have all the menu-item to be relative so the notification popup must have position */
-.left .notification-popup{
-    position: absolute;
-    top: 0;
-    left: 110%;
-    width: 30rem;
-    background: var(--color-white);
-    border-radius: var(--card-border-radius);
-    padding: var(--card-padding);
-    box-shadow: 0 0 2rem hsl(var(--color-primary), 75%, 60%, 25%)
+.left .notification-popup {
+  position: absolute;
+  top: 0;
+  left: 110%;
+  width: 30rem;
+  background: var(--color-white);
+  border-radius: var(--card-border-radius);
+  padding: var(--card-padding);
+  box-shadow: 0 0 2rem hsl(var(--color-primary), 75%, 60%, 25%);
+  display: none;
+  /* display is none, we are using javascript to show it */
 }
 
-.left .notification-popup::before{
-    content: '';
-    width: 1.2rem;
-    height: 1.2rem;
-    display: block;
-    background: red;
+.left .notification-popup::before {
+  content: "";
+  width: 1.2rem;
+  height: 1.2rem;
+  display: block;
+  background: red;
 }
 /* styling the direct div. Individual styling */
-.left .notification-popup > div{
+.left .notification-popup > div {
+  display: flex;
+  align-items: start;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
+
+.left .notification-popup small {
+  display: block;
+}
+
+
+/* ----------------------------- MIDDLE ----------------------------- */
+.middle .stories{
     display: flex;
-    align-items: start;
-    gap: 1rem;
-    margin-bottom: 1rem;
+    justify-content: space-between;
+    height: 12rem;
+    gap: 0.5rem;
+}
+/* Parent takes position relative */
+.middle .stories .story{
+    padding: var(--card-padding);
+    border-radius: var(--card-border-radius);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    font-size: 0.75rem;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+}
+
+/*
+the images are not showing clearly,
+so we are setting the before of each story,
+child takes position:absolute
+ */
+ .middle .stories .story::before{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 5rem;
+    /* There's a black rectangle that was made tranparent for the text to show */
+    background: linear-gradient(transparent, rgba(0, 0, 0, 0.75));
+    position: absolute;
+    bottom: 0;
+ }
+
+ .middle .stories .story .name{
+    z-index: 2;
+ }
+
+/* Psuedo class .story:nth-child(1) means the first-child of the element story */
+.middle .stories .story:nth-child(1){
+    background: url("./images/story-1.jpg") no-repeat center center/cover;
+}
+
+.middle .stories .story:nth-child(2){
+    background: url("./images/story-2.jpg") no-repeat center center/cover;
+}
+
+.middle .stories .story:nth-child(3){
+    background: url("./images/story-3.jpg") no-repeat center center/cover;
+}
+
+.middle .stories .story:nth-child(4){
+    background: url("./images/story-4.jpg") no-repeat center center/cover;
+}
+
+.middle .stories .story:nth-child(5){
+    background: url("./images/story-5.jpg") no-repeat center center/cover;
+}
+
+.middle .stories .story:nth-child(6){
+    background: url("./images/story-6.jpg") no-repeat center center/cover;
+}
+
+.middle .stories .story:nth-child(6){
+    background: url("./images/story-6.jpg") no-repeat center center/cover;
+}
+
+.middle .story .profile-photo{
+    width: 2rem;
+    height: 2rem;
+    align-self: start;
+    border: 3px solid var(--color-primary);
+}
+
+/* --------------------- CREATE POST SECTION ------------------------ */
+.middle .create-post{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 1rem;
+    background: var(--color-white);
+    padding: 0.4rem var(--card-padding);
+    border-radius: var(--border-radius);
 }
