--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ nav .container {
   padding: var(--search-padding);
 }
 
-nav .search-bar input[type="search-bar"] {
+.search-bar input[type="search"] {
   background: transparent;
   width: 30vw;
   margin-left: 1rem;
@@ -117,7 +117,7 @@ nav .search-bar input[type="search-bar"] {
   color: var(--color-dark);
 }
 
-nav .search-bar input[type="search-bar"]::placeholder {
+nav .search-bar input[type="search"]::placeholder {
   color: var(--color-gray);
 }
 
@@ -185,7 +185,7 @@ main .container .left .profile {
   position: relative;
 }
 
-.left .sidebar i .notification-count {
+.left .sidebar .notification-count {
   background: var(--color-danger);
   color: white;
   font-size: 0.7rem;
@@ -460,41 +460,88 @@ main .container .right {
 }
 
 .right .messages .category {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 1rem;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
 }
 
 .right .messages .category h6 {
-    width: 100%;
-    text-align: center;
-    border-bottom: 4px solid var(--color-light);
-    padding-bottom: 0.5rem;
-    font-size: 0.85rem;
+  width: 100%;
+  text-align: center;
+  border-bottom: 4px solid var(--color-light);
+  padding-bottom: 0.5rem;
+  font-size: 0.85rem;
 }
 
 .right .messages .category .active {
-    border-color: var(--color-dark);
+  border-color: var(--color-dark);
+}
+
+.right .messages .message-requests {
+  color: var(--color-primary);
 }
 
 .right .messages .message {
-    display: flex;
-    gap: 1rem;
-    margin-bottom: 1rem;
-    align-items: start;
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 1rem;
+  align-items: start;
+}
+
+.right .message .profile-photo {
+  position: relative;
+  overflow: visible;
+}
+
+.right .profile-photo img{
+  border-radius: 50%;
 }
 
 .right .messages .message:last-child {
-    margin: 0;
+  margin: 0;
 }
 
 .right .messages .message p {
-    font-size: 0.8rem;
+  font-size: 0.8rem;
 }
 
 .right .messages .message .profile-photo .active {
-    width: 0.8rem;
-    height: 0.8rem;
-    border-radius: 50%;
-    border: 3px solid var(--color-white);
+  width: 0.8rem;
+  height: 0.8rem;
+  border-radius: 50%;
+  border: 3px solid var(--color-white);
+  background: var(--color-success);
+  position: absolute;
+  bottom: 0; 
+  right: 0;
 }
+
+
+
+/* ------------------------ FRIEND REQUEST ---------------------------- */
+ .right .friend-requests {
+  margin-top: 1rem;
+ }
+
+ .right .friend-requests h4 {
+  color: var(--color-gray);
+  margin: 1rem 0;
+ }
+
+ .right .request {
+  background: var(--color-white);
+  padding: var(--card-padding);
+  border-radius: var(--card-border-radius);
+  margin-bottom: 0.7rem;
+ }
+
+ .right .request .info {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 1rem;
+ }
+
+ .right .request .action {
+  display: flex;
+  gap: 1rem;
+ }
