--- a/laptop.css
+++ b/laptop.css
@@ -1,10 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,500;9..144,600;9..144,700;9..144,800;9..144,900&family=Poppins:wght@300;400;500;600;700&display=swap");
 
 :root {
+  --color-primary-hue: 252;
   --color-white: hsl(252, 30%, 100%);
   --color-light: hsl(252, 30%, 95%);
   --color-gray: hsl(252, 15%, 65%);
-  --color-primary: hsl(252, 75%, 60%);
+  --color-primary: hsl(var(--color-primary-hue), 75%, 60%);
   --color-secondary: hsl(252, 100%, 90%);
   --color-success: hsl(120, 95%, 65%);
   --color-danger: hsl(0, 95%, 65%);
@@ -52,5 +53,9 @@ MEDIA QUERIES FOR SMALL LAPTOPS AND BIG TABLETS
 
   .left .btn {
     display: none;
+  }
+
+  .customize-theme .card {
+    width: 80vw;
   }
 }
