--- a/mobile.css
+++ b/mobile.css
@@ -1,27 +1,33 @@
 @import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,500;9..144,600;9..144,700;9..144,800;9..144,900&family=Poppins:wght@300;400;500;600;700&display=swap");
 
 :root {
-  --color-primary-hue: 252;
-  --color-white: hsl(252, 30%, 100%);
-  --color-light: hsl(252, 30%, 95%);
-  --color-gray: hsl(252, 15%, 65%);
-  --color-primary: hsl(var(--color-primary-hue), 75%, 60%);
-  --color-secondary: hsl(252, 100%, 90%);
-  --color-success: hsl(120, 95%, 65%);
-  --color-danger: hsl(0, 95%, 65%);
-  --color-dark: hsl(252, 30%, 17%);
-  --color-black: hsl(252, 30%, 10%);
+ /* We are using Javascript to change this colors for the backgrounds */
+ --primary-color-hue: 252;
+ --dark-color-lightness: 17%;
+ --light-color-lightness: 95%;
+ --white-color-lightness: 100%;
+ /* We are using Javascript to change this colors for the backgrounds */
 
-  --border-radius: 2rem;
-  --card-border-radius: 1rem;
-  --btn-padding: 0.6rem 2rem;
-  --search-padding: 0.6rem 1rem;
-  --card-padding: 1rem;
+ --color-primary-hue: 252;
+ --color-white: hsl(252, 30%, var(--white-color-lightness));
+ --color-light: hsl(252, 30%, var(--light-color-lightness));
+ --color-gray: hsl(var(--primary-color-hue), 15%, 65%);
+ --color-primary: hsl(var(--color-primary-hue), 75%, 60%);
+ --color-secondary: hsl(252, 100%, 90%);
+ --color-success: hsl(120, 95%, 65%);
+ --color-danger: hsl(0, 95%, 65%);
+ --color-dark: hsl(252, 30%, var(--dark-color-lightness));
+ --color-black: hsl(252, 30%, 10%);
 
-  --sticky-top-left: 5.4rem;
-  --sticky-top-right: -18rem;
+ --border-radius: 2rem;
+ --card-border-radius: 1rem;
+ --btn-padding: 0.6rem 2rem;
+ --search-padding: 0.6rem 1rem;
+ --card-padding: 1rem;
+
+ --sticky-top-left: 5.4rem;
+ --sticky-top-right: -18rem;
 }
-
 /* 
 =================================================
 MEDIA QUERIES FOR SMALL TABLETS AND MOBILE PHONES
