Added a Read me file

--- a/style.css
+++ b/style.css
@@ -453,6 +453,7 @@ main .container .right {
 
 .right .messages .heading {
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: space-between;
   margin-bottom: 1rem;
